--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "league/flysystem-aws-s3-v3": "^3.12",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
