--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.2",
         "league/flysystem-aws-s3-v3": "^3.12",
         "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.28",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
