--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "league/flysystem-aws-s3-v3": "^3.12",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.28",
+        "staudenmeir/laravel-cte": "^1.0",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
